# sushi-api

./: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
app/: config.py  dependencies.py  main.py
app/db/: __init__.py  base.py  postgres.py
app/domains/agent/: defaults.py  dependencies.py  models.py  schemas.py
app/domains/agent/handlers/: __init__.py  agent.py  knowledge.py  template.py
app/domains/agent/llm/: client.py
app/domains/agent/prompt/: base.py  builder.py
app/domains/agent/repositories/: agent.py  knowledge_entry.py  reply_template.py  tool_execution.py
app/domains/agent/services/: agent_chat_service.py  agent_context_loader.py  agent_crud_service.py  agent_runner.py  tool_executor.py
app/domains/agent/tools/: base.py  book_appointment.py  cancel_booking.py  check_availability.py  edit_booking.py  escalate.py  list_bookings.py  registry.py
app/domains/analytics/: handlers.py  schemas.py  service.py
app/domains/auth/: handler.py  schemas.py  service.py
app/domains/company/: dependencies.py  models.py  schemas.py
app/domains/company/handlers/: __init__.py  booking.py  branch.py  company.py  invite.py  member.py  service.py  staff.py
app/domains/company/repositories/: __init__.py  availability_override.py  base.py  (+9 more)
app/domains/messaging/: dependencies.py  models.py  schemas.py
app/domains/pipeline/: contracts.py  dependencies.py  guardrails.py  service.py
app/domains/whatsapp/: dependencies.py  models.py  schemas.py
app/models/: base.py
migrations/: env.py
scripts/: create_tables.sql
(+28 files in other folders)
